--- a/arbol binario/estilos.css
+++ b/arbol binario/estilos.css
@@ -10,10 +10,31 @@ form {
     margin-top: 2em;
 }
 
+#inventario {
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 1em;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+.item {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border: 1px solid #ccc;
+    padding: 1em;
+    text-align: center;
+}
+
 img {
     width: 32px;
     height: 32px;
+    background-size: cover;
+    background-position: center;
 }
+
 
 
 input[type="text"], input[type="number"] {
